--- a/PokerMuck/Properties/Resources.resx
+++ b/PokerMuck/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="Eagle" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Eagle.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Hud" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Hud.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
