--- a/PokerMuck/Classes/Forms/FrmFirstExecutionWizard.resx
+++ b/PokerMuck/Classes/Forms/FrmFirstExecutionWizard.resx
@@ -123,6 +123,9 @@
   <data name="lblPageFourText.Text" xml:space="preserve">
     <value>Select the directory where the hand histories are being recorded. Looking at your poker client's settings should tell you where this location is. You can change this location at any time through the "Configuration" panel.</value>
   </data>
+  <data name="lblPageTwoText.Text" xml:space="preserve">
+    <value>Select the Poker Client you are using and specify the language that your hand histories will be recorded (not the language of your client). You can change these settings at any time through the "Configuration" panel. </value>
+  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
