--- a/PokerMuck/Properties/Resources.resx
+++ b/PokerMuck/Properties/Resources.resx
@@ -121,10 +121,19 @@
   <data name="Eagle" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Eagle.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="GoldIco" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\goldIco.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="HandHistorySettings" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\HandHistorySettings.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Hud" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Hud.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="StealMaskIco" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\StealMaskIco.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="TelephoneIco" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\TelephoneIco.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
