--- a/PokerMuck/Properties/Resources.resx
+++ b/PokerMuck/Properties/Resources.resx
@@ -121,6 +121,9 @@
   <data name="AnvilIco" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\AnvilIco.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="DonkIco" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\donkIco.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Eagle" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Eagle.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
