--- a/PokerMuck/Properties/Resources.resx
+++ b/PokerMuck/Properties/Resources.resx
@@ -118,23 +118,26 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="GoldIco" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\goldIco.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Eagle" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Eagle.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="TableDisplayWindowBackground" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\TableDisplayWindowBackground.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="AnvilIco" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\AnvilIco.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="DonkIco" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\donkIco.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Eagle" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Eagle.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="ForbiddenIco" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ForbiddenIco.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="GoldIco" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\goldIco.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="HandHistorySettings" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\HandHistorySettings.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="TelephoneIco" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\TelephoneIco.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Hud" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Hud.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -145,7 +148,10 @@
   <data name="StealMaskIco" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\StealMaskIco.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="TelephoneIco" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\TelephoneIco.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="ForbiddenIco" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ForbiddenIco.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="TableDisplayTabBackground" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\TableDisplayTabBackground.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
