--- a/PokerMuck/Properties/Resources.resx
+++ b/PokerMuck/Properties/Resources.resx
@@ -124,8 +124,8 @@
   <data name="Eagle" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Eagle.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="TableDisplayWindowBackground" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\TableDisplayWindowBackground.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="StealMaskIco" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\StealMaskIco.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="AnvilIco" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\AnvilIco.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -133,8 +133,11 @@
   <data name="DonkIco" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\donkIco.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="HandHistorySettings" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\HandHistorySettings.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="TableDisplayTabBackground" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\TableDisplayTabBackground.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="TableDisplayWindowBackground" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\TableDisplayWindowBackground.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="TelephoneIco" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\TelephoneIco.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -145,13 +148,13 @@
   <data name="QuestionIco" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\QuestionIco.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="StealMaskIco" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\StealMaskIco.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="HandHistorySettings" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\HandHistorySettings.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="ForbiddenIco" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ForbiddenIco.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="TableDisplayTabBackground" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\TableDisplayTabBackground.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="PokerMuckLogo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\PokerMuck-Logo.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
